# zachet

./: CMakeLists.txt
matrix/: matrix.cpp  matrix.hpp
polynomial/: poly.cpp  poly.hpp
tests/: quick_sort.cpp  quick_sort.hpp  test.cpp
